--- a/templates/seinfood.html
+++ b/templates/seinfood.html
@@ -40,7 +40,7 @@
                             <h3>Dine Like the Characters!</h3>
                             <form action="/zip-code">
                                 <label name="your-zip-code">Your zip code: </label>
-                                <input type="text" id="zip-code" name="zip-code" pattern="[0-9]{5,5}" maxlength="5">
+                                <input type="text" id="zip-code" name="zip-code" pattern="[0-9]{5,5}" maxlength="5" style="border-radius: 5px">
                                 <text name="zip-user-input" id="zip-user-input"></text>  
                                 <p><em>* 10 mile radius</em></p><br>
                                 <input type="submit" value="submit" id="zip-button">
