--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 
     <header>
         <nav class="navbar navbar-expand-xl navbar-dark fixed-top" style="background-color: #dd6e42">
-            <a class="navbar-brand" href="/">The Ultimate Seinfeld Experience</a>
+            <a class="navbar-brand" id="navbar-logo" href="/">The Ultimate Seinfeld Experience</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
