--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -36,25 +36,25 @@
           <div class="col-lg-3">
             <img class="rounded-circle" src="static/images/jerry comp on phone.jpeg" alt="Jerry on the phone" width="140" height="140">
             <h2>Bot Chat</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+            <p>Pick a character from the show to have an instant-message conversation with.</p>
             <p><a class="btn btn-secondary" href="#" role="button">Let's chat! &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-3">
             <img class="rounded-circle" src="static/images/frank pointing.jpeg" alt="Generic placeholder image" width="140" height="140">
             <h2>Festivus</h2>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+            <p>The holiday is approaching. Check to see how much longer until it's here.</p>
             <p><a class="btn btn-secondary" href="#" role="button">When is it? &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-3">
             <img class="rounded-circle" src="static/images/kramer comp.jpeg" alt="Generic placeholder image" width="140" height="140">
             <h2>Tweets</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p>Seinfeld's final episode was in 1998, but that doesn't mean the actors are sitting around doing more nothing.</p>
             <p><a class="btn btn-secondary" href="#" role="button">Show me! &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-3">
             <img class="rounded-circle" src="static/images/toms.jpeg" alt="Generic placeholder image" width="140" height="140">
             <h2>Restaurants</h2>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <p>Use the local search to see where cuisine and items mentioned on the show are available near you.</p>
             <p><a class="btn btn-secondary" href="#" role="button">I'm hungry! &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
