--- a/templates/where-are-they-now.html
+++ b/templates/where-are-they-now.html
@@ -11,21 +11,19 @@
     <br>
     <div class="container">
         <div class="float-right">
-            <div class="container">
-                <div class="float-right">
                     <div class="page-description">
                         <p>We love Seinfeld the show. Its final episode was in 1998, but that doesn't 
                             mean the actors are sitting around doing more nothing. Some of them post on 
                             Twitter. Check out their most recent tweets.</p>
                     </div>
                     <div class="accordion" id="accordionExample">
-                      <div class="accordion-item jerry-twitter">
+                      <div class="accordion-item">
                         <h2 class="accordion-header" id="headingOne">
-                          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                             Jerry Seinfeld as 'Jerry' on 'Seinfeld'
                           </button>
                         </h2>
-                        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                           <div class="accordion-body">
                             <!-- {% for i in range(jerry_tweet_ids|length) %}
                             <blockquote class="twitter-tweet">
@@ -101,8 +99,7 @@
                       </div>
                         </div>
                       </div>
-                    </div>
-                </div>
+
             </div>
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
