--- a/static/css/index.css
+++ b/static/css/index.css
@@ -48,6 +48,7 @@ body {
     font-size: 5em;
     color: white;
     text-shadow: 2px 2px 5px #e3c505;
+    letter-spacing: .012em;
   }
 
   .subpage-header {
@@ -60,6 +61,11 @@ body {
   h1 {
     font-size: 1.5em;
     margin-top: 50px;
+    letter-spacing: .012em;
+  }
+
+  h2 {
+    color: #4f6d7a;
   }
 
   .navbar-brand {
@@ -67,6 +73,8 @@ body {
     font-family: 'streamster' !important;
     font-size: 1.75em;
     color: #4f6d7a !important;
+    letter-spacing: .06em;
+    text-shadow: 2px 2px 5px #e3c505;
   }
 
   #accordionExample {
@@ -77,11 +85,16 @@ body {
     box-shadow: 0 2px 40px 0 rgb(0 0 0 / 30%);
   }
 
+  .btn, #zip-button, #end-convo, #bot-chat-submit-button {
+    background-color: #4f6d7a;
+    color: white;
+  }
+
   a:hover {
     color:#e3c505;
   }
 
-  .btn:hover {
+  .btn:hover, #zip-button:hover, #end-convo:hover, #bot-chat-submit-button:hover {
     background-color:#e3c505;
   }
   
@@ -117,6 +130,17 @@ body {
 .accordion-item {
   background-color: transparent !important;
   border: none;
+}
+
+#user-name-style {
+  font-weight: bold;
+  color: #4f6d7a;
+
+}
+
+#bot-name-style {
+  font-weight: bold;
+  color: #e3c505;
 }
 
 
