--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
     <header>
-        <nav class="navbar navbar-expand-xl navbar-dark fixed-top" style="background-color: #dd6e42">
+        <nav class="navbar navbar-expand-xl navbar-dark fixed-top active" style="background-color: #dd6e42">
             <a class="navbar-brand" id="navbar-logo" href="/">The Ultimate Seinfeld Experience</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
