--- a/templates/character_chat.html
+++ b/templates/character_chat.html
@@ -2,6 +2,39 @@
 
 <title>{% block title %}Seinfeld Character Bot Chat{% endblock %}</title>
 {% block content %}
+
+<script type="text/javascript">
+    var url = window.location.href;
+    if (url.includes("username")) {
+        document.getElementById("character-select").style.visibility = "hidden";
+    }
+
+
+    var url = window.location.href;
+    if (url.includes("username")) {
+        document.getElementById("character-instructions").style.visibility = "hidden";
+    }
+
+
+    // find the element with the thing youre taking
+    const submitInput = document.getElementById('user-input');
+    // look for the action that consents to taking the thing
+    submitInput.addEventListener('keydown', function (event) {
+        // this is the action
+        if (event.keyCode == 13) {
+            // dont do what would normally happen when the action is requested
+            event.preventDefault();
+            // instead, do this (click the submit button)
+            document.getElementById("submit-button").click();
+        }
+    });
+
+
+    var url = window.location.href;
+    if (url.includes("username")) {
+        document.getElementById("username-fields").style.visibility = "hidden";
+    }
+</script>
 <div class="subpage-header">
     <h1>Character Bot Chat</h1>
 </div>
@@ -10,81 +43,84 @@
 <div class="container">
     <div class="float-right"></div>
     <div class="bot-chat">
-        <h2 id="bot-chat">Chat with a Seinfeld character bot!</h3>
-            <p id="character-instructions">Pick a character from the show to have an instant-message conversation with.
-            </p>
-            <form action="/character-chat">
-                <select class="form-control" name="character-bot" id="character-select">
-                    <!-- the character who was sent a chat is automatically selected for the next message in session -->
-                    <option value="Jerry" {% if bot_name=='Jerry' %} selected{% endif %}>Jerry</option>
-                    <option value="George" {% if bot_name=='George' %} selected{% endif %}>George</option>
-                    <option value="Elaine" {% if bot_name=='Elaine' %} selected{% endif %}>Elaine</option>
-                    <option value="Kramer" {% if bot_name=='Kramer' %} selected{% endif %}>Kramer</option>
-                </select>
-                <script type="text/javascript">
-                    var url = window.location.href;
-                    if (url.includes("username")) {
-                        document.getElementById("character-select").style.visibility = "hidden";
-                    }
-                    var url = window.location.href;
-                    if (url.includes("username")) {
-                        document.getElementById("character-instructions").style.visibility = "hidden";
-                    }
-                </script>
-                <div class="transcript">
-                    <!-- for how many messages are saved in the session, show that many messages with
-                                a bot response-->
-                    <!-- user_messages session holds "None" in session upon load, making len=1-->
-                    {% for i in range(user_messages|length) %}
-                    {% if user_messages[i+1] %}<p id="user-line"><span id="user-name-style">{{ user_name }}:
-                        </span><span class="message-font">{{ user_messages[i+1] }}</span></p><br>
-                    {% if bot_responses[i] %}<p id="bot-line"><span id="bot-name-style">{{ bot_name }}: </span><span
-                            class="message-font">{{ bot_responses[i] }}</span></p><br>{% endif %}{%
-                    endif %}
-                    {% endfor %}
+        <div class="row">
+            <h2 id="bot-chat">Chat with a Seinfeld bot!</h3>
+        </div>
+        <br>
+        <br>
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <p id="character-instructions">Pick a character:</p>
+                    </div>
+                    <div class="col-sm-4">
+                        <form action="/character-chat">
+                            <select class="form-control" name="character-bot" id="character-select">
+                                <!-- the character who was sent a chat is automatically selected for the next message in session -->
+                                <option value="Jerry" {% if bot_name=='Jerry' %} selected{% endif %}>Jerry</option>
+                                <option value="George" {% if bot_name=='George' %} selected{% endif %}>George</option>
+                                <option value="Elaine" {% if bot_name=='Elaine' %} selected{% endif %}>Elaine</option>
+                                <option value="Kramer" {% if bot_name=='Kramer' %} selected{% endif %}>Kramer</option>
+                            </select>
+                            <br>
+                            <br>
+                    </div>
                 </div>
-                <br>
-                <div id="username-fields">
-                    <p>Make up a username for your chat.</p>
-                    <label for="username">Username:</label>
-                    <input class="form-control" type="username" id="username" name="username" {% if user_name %}
-                        placeholder="{{ user_name }}" {% endif %}>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <label for="username">Make a username:</label>
+                    </div>
+                    <div class="col-sm-4">
+                        <input class="form-control" type="username" id="username" name="username" {% if user_name %}
+                            placeholder="{{ user_name }}" {% endif %}>
+                        <br>
+                        <br>
+                    </div>
                 </div>
-                <br>
-                <br>
-                <textarea class="form-control" rows="3" cols="30" name="user-input" id="user-input"
-                    style="border-radius: 5px"></textarea>
-                <br>
-                <input class="form-control" type="submit" value="Submit" id="bot-chat-submit-button">
-                <br>
-                <script type="text/javascript">
-                    var url = window.location.href;
-                    if (url.includes("username")) {
-                        document.getElementById("username-fields").style.visibility = "hidden";
-                    }
-                </script>
-            </form>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <input class="form-control" name="user-input" id="user-input" style="border-radius: 5px"
+                            placeholder="Start typing...">
+                        <br>
+                    </div>
+                    <div class="col-sm-12">
+                        <input class="form-control" type="submit" value="Submit" id="bot-chat-submit-button">
+                        <br>
+                        <br>
+                    </div>
+                </div>
+                </form>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <p><em>*To switch characters, end the conversation.</em></p>
+                        
+                    </div>
+                    <div class="col-sm-12">
+                        <form action="/clear" method="GET">
+                            <input class="form-control" type="submit" value="End Chat" id="end-convo">
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <img src="static/images/jerry comp gif.gif">
+            </div>
+        </div>
     </div>
-    <script type="text/javascript">
-        // find the element with the thing youre taking
-        const submitInput = document.getElementById('user-input');
-        // look for the action that consents to taking the thing
-        submitInput.addEventListener('keydown', function (event) {
-            // this is the action
-            if (event.keyCode == 13) {
-                // dont do what would normally happen when the action is requested
-                event.preventDefault();
-                // instead, do this (click the submit button)
-                document.getElementById("submit-button").click();
-            }
-        });
-    </script>
-    <div class="end-convo">
-        <p>To chat with a different character, end the conversation then choose a new name from the top.</p>
-        <form action="/clear" method="GET">
-            <input class="form-control" type="submit" value="End Chat" id="end-convo">
-        </form>
     </div>
 </div>
+
+<div class="transcript">
+    <!-- for how many messages are saved in the session, show that many messages with
+            a bot response-->
+    <!-- user_messages session holds "None" in session upon load, making len=1-->
+    {% for i in range(user_messages|length) %}
+    {% if user_messages[i+1] %}<p id="user-line"><span id="user-name-style">{{ user_name }}:
+        </span><span class="message-font">{{ user_messages[i+1] }}</span></p><br>
+    {% if bot_responses[i] %}<p id="bot-line"><span id="bot-name-style">{{ bot_name }}: </span><span
+            class="message-font">{{ bot_responses[i] }}</span></p><br>{% endif %}{%
+    endif %}
+    {% endfor %}
 </div>
 {% endblock %}
