--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -34,21 +34,21 @@
     <!-- Four columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-3">
-        <img class="rounded-circle" src="static/images/jerry comp on phone.jpeg" alt="Jerry on the phone" width="140"
+        <img class="rounded-circle" src="static/images/jerry phone.jpg" alt="Jerry on the phone" width="140"
           height="140">
         <h2>Bot Chat</h2>
         <p>Pick a character from the show to have an instant-message conversation with.</p>
         <p><a class="btn btn-secondary" href="#" role="button">Let's chat! &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-3">
-        <img class="rounded-circle" src="static/images/frank pointing.jpeg" alt="Generic placeholder image" width="140"
+        <img class="rounded-circle" src="static/images/frank points.jpg" alt="Generic placeholder image" width="140"
           height="140">
         <h2>Festivus</h2>
         <p>The holiday is approaching. Check to see how much longer until it's here.</p>
         <p><a class="btn btn-secondary" href="#" role="button">When is it? &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-3">
-        <img class="rounded-circle" src="static/images/kramer comp.jpeg" alt="Generic placeholder image" width="140"
+        <img class="rounded-circle" src="static/images/kramer computer.jpg" alt="Generic placeholder image" width="140"
           height="140">
         <h2>Tweets</h2>
         <p>Seinfeld's final episode was in 1998, but that doesn't mean the actors are sitting around doing more nothing.
