--- a/templates/where-are-they-now.html
+++ b/templates/where-are-they-now.html
@@ -11,12 +11,13 @@
 <br>
 <div class="container">
     <div class="float-right">
-        <div class="page-description">
+        <div class="row watn-description">
+            <div class="col-sm-7"
             <p>We love Seinfeld the show. Its final episode was in 1998, but that doesn't
                 mean the actors are sitting around doing more nothing. Some of them post on
                 Twitter. Check out their most recent tweets.</p>
+            </div>
         </div>
-
         <div class="accordion" id="accordionExample">
             <div class="container">
                 <div class="row">
@@ -24,21 +25,21 @@
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="color: #4f6d7a">
                                     Jerry Seinfeld as 'Jerry' on 'Seinfeld'
                                 </button>
                             </h2>
                             <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
-                                    <!-- {% for i in range(jerry_tweet_ids|length) %}
+                                    {% for i in range(jerry_tweet_ids|length) %}
                             <blockquote class="twitter-tweet">
                                 <a href="https://twitter.com/{{ jerry_twitter_handle }}/status/{{ jerry_tweet_ids[i] }}">
                                 </a>
                                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
                                 </script>
                             </blockquote> 
-                            {% endfor %}  -->
+                            {% endfor %} 
                                 </div>
                             </div>
                         </div>
@@ -47,7 +48,7 @@
                         <div class="accordion-item julia-twitter">
                             <h2 class="accordion-header" id="headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+                                    data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo" style="color: #4f6d7a">
                                     Julia Louis-Dreyfus as 'Elaine' on 'Seinfeld'
                                 </button>
                             </h2>
@@ -55,14 +56,14 @@
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
 
-                                    <!-- {% for i in range(julia_tweet_ids|length) %}
+                                    {% for i in range(julia_tweet_ids|length) %}
                                 <blockquote class="twitter-tweet">
                                     <a href="https://twitter.com/{{ julia_twitter_handle }}/status/{{ julia_tweet_ids[i] }}">
                                     </a>
                                     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
                                     </script>
                                 </blockquote> 
-                                {% endfor %}                         -->
+                                {% endfor %}                        
                                 </div>
                             </div>
                         </div>
@@ -72,21 +73,21 @@
                                 <div class="accordion-item jason-twitter">
                                     <h2 class="accordion-header" id="headingThree">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                            data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
+                                            data-bs-target="#collapseThree" aria-expanded="true" aria-controls="collapseThree" style="color: #4f6d7a">
                                             Jason Alexander as 'George' on 'Seinfeld'
                                         </button>
                                     </h2>
                                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                                         data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <!-- {% for i in range(jason_tweet_ids|length) %}
+                                            {% for i in range(jason_tweet_ids|length) %}
                                         <blockquote class="twitter-tweet">
                                             <a href="https://twitter.com/{{ jason_twitter_handle }}/status/{{ jason_tweet_ids[i] }}">
                                             </a>
                                             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
                                             </script>
                                         </blockquote> 
-                                        {% endfor %} -->
+                                        {% endfor %}
                                         </div>
                                     </div>
                                 </div>
@@ -95,21 +96,21 @@
                                 <div class="accordion-item modern-twitter">
                                     <h2 class="accordion-header" id="headingFour">
                                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                            data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
+                                            data-bs-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour" style="color: #4f6d7a">
                                             Bonus: A take on how episodes might have gone in the 2010's
                                         </button>
                                     </h2>
                                     <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                                         data-bs-parent="#accordionExample">
                                         <div class="accordion-body">
-                                            <!-- {% for i in range(modern_tweet_ids|length) %}
+                                            {% for i in range(modern_tweet_ids|length) %}
                                         <blockquote class="twitter-tweet">
                                             <a href="https://twitter.com/{{ modern_twitter_handle }}/status/{{ modern_tweet_ids[i] }}">
                                             </a>
                                             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">
                                             </script>
                                         </blockquote> 
-                                    {% endfor %} -->
+                                    {% endfor %}
                                         </div>
                                     </div>
                                 </div>
@@ -119,15 +120,6 @@
                         </div>
                     </div>
                 </div>
-                <script src="https://code.jquery.com/jquery-3.6.0.js"
-                    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-                <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
-                    integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
-                    crossorigin="anonymous"></script>
-                <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
-                    integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
-                    crossorigin="anonymous"></script>
-
                 {% endblock %}
             </div>
             </div>
