--- a/templates/character_chat.html
+++ b/templates/character_chat.html
@@ -3,33 +3,7 @@
 <title>{% block title %}Seinfeld Character Bot Chat{% endblock %}</title>
 {% block content %}
 
-<script type="text/javascript">
-    var url = window.location.href;
-    if (url.includes("username")) {
-        console.log("PICK CHAR")
-        document.getElementById("pick-char").style.visibility = "hidden";
-    }
 
-    var url = window.location.href;
-    if (url.includes("username")) {
-        console.log("PICK USERNAME")
-        document.getElementById("pick-username").style.visibility = "hidden";
-    }
-
-
-    // find the element with the thing youre taking
-    const submitInput = document.getElementById('user-input');
-    // look for the action that consents to taking the thing
-    submitInput.addEventListener('keydown', function (event) {
-        // this is the action
-        if (event.keyCode == 13) {
-            // dont do what would normally happen when the action is requested
-            event.preventDefault();
-            // instead, do this (click the submit button)
-            document.getElementById("submit-button").click();
-        }
-    });
-</script>
 <div class="subpage-header">
     <h1>Character Bot Chat</h1>
 </div>
@@ -45,27 +19,32 @@
         <br>
         <div class="row">
             <div class="col-sm-6">
+                <div id="pick-char">
+                    <div class="row">
+
+
+                        <div class="col-sm-4">
+
+                            <p>Pick a character:</p>
+
+                        </div>
+                        <div class="col-sm-4">
+                            <form action="/character-chat">
+                                <select class="form-control" name="character-bot" id="character-select">
+                                    <!-- the character who was sent a chat is automatically selected for the next message in session -->
+                                    <option value="Jerry" {% if bot_name=='Jerry' %} selected{% endif %}>Jerry</option>
+                                    <option value="George" {% if bot_name=='George' %} selected{% endif %}>George
+                                    </option>
+                                    <option value="Elaine" {% if bot_name=='Elaine' %} selected{% endif %}>Elaine
+                                    </option>
+                                    <option value="Kramer" {% if bot_name=='Kramer' %} selected{% endif %}>Kramer
+                                    </option>
+                                </select>
+                                <br>
+                                <br>
+                        </div>
+                    </div>
                 
-                <div class="row">
-                    <div class="col-sm-4">
-                        <div id="pick-char">
-                        <p>Pick a character:</p>
-                    </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <form action="/character-chat">
-                            <select class="form-control" name="character-bot" id="character-select">
-                                <!-- the character who was sent a chat is automatically selected for the next message in session -->
-                                <option value="Jerry" {% if bot_name=='Jerry' %} selected{% endif %}>Jerry</option>
-                                <option value="George" {% if bot_name=='George' %} selected{% endif %}>George</option>
-                                <option value="Elaine" {% if bot_name=='Elaine' %} selected{% endif %}>Elaine</option>
-                                <option value="Kramer" {% if bot_name=='Kramer' %} selected{% endif %}>Kramer</option>
-                            </select>
-                            <br>
-                            <br>
-                    </div>
-                
-                </div>
                 <div class="row" id="pick-username">
                     <div class="col-sm-4">
                         <label for="username">Make a username:</label>
@@ -76,6 +55,7 @@
                         <br>
                         <br>
                     </div>
+                </div>    
                 </div>
                 <div class="row">
                     <div class="col-sm-12">
@@ -122,4 +102,25 @@
     endif %}
     {% endfor %}
 </div>
+
+<script type="text/javascript">
+    var url = window.location.href;
+    if (url.includes("username")) {
+        document.getElementById("pick-char").style.display = "none";
+    }
+
+    
+    // find the element with the thing youre taking
+    const submitInput = document.getElementById('user-input');
+    // look for the action that consents to taking the thing
+    submitInput.addEventListener('keydown', function (event) {
+        // this is the action
+        if (event.keyCode == 13) {
+            // dont do what would normally happen when the action is requested
+            event.preventDefault();
+            // instead, do this (click the submit button)
+            document.getElementById("submit-button").click();
+        }
+    });
+</script>
 {% endblock %}
