--- a/templates/where-are-they-now.html
+++ b/templates/where-are-they-now.html
@@ -12,7 +12,7 @@
 <div class="container">
     <div class="float-right">
         <div class="row watn-description">
-            <div class="col-sm-7"
+            <div class="col-sm-7">
             <p>We love Seinfeld the show. Its final episode was in 1998, but that doesn't
                 mean the actors are sitting around doing more nothing. Some of them post on
                 Twitter. Check out their most recent tweets.</p>
