--- a/templates/character_chat.html
+++ b/templates/character_chat.html
@@ -17,16 +17,29 @@
         </div>
         <br>
         <br>
+        
         <div class="row">
             <div class="col-sm-6">
+                <div class="transcript">
+
+                            <!-- for how many messages are saved in the session, show that many messages with
+                        a bot response-->
+                            <!-- user_messages session holds "None" in session upon load, making len=1-->
+                            {% for i in range(user_messages|length) %}
+                            {% if user_messages[i+1] %}<p id="user-line"><span id="user-name-style">{{ user_name
+                                    }}:
+                                </span><span class="message-font">{{ user_messages[i+1] }}</span></p><br>
+                            {% if bot_responses[i] %}<p id="bot-line"><span id="bot-name-style">{{ bot_name }}:
+                                </span><span class="message-font">{{ bot_responses[i] }}</span></p><br>{% endif
+                            %}{%
+                            endif %}
+                            {% endfor %}
+
+                </div>
                 <div id="pick-char">
                     <div class="row">
-
-
                         <div class="col-sm-4">
-
                             <p>Pick a character:</p>
-
                         </div>
                         <div class="col-sm-4">
                             <form action="/character-chat">
@@ -44,83 +57,71 @@
                                 <br>
                         </div>
                     </div>
-                
-                <div class="row" id="pick-username">
-                    <div class="col-sm-4">
-                        <label for="username">Make a username:</label>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <label for="username">Make a username:</label>
+                        </div>
+                        <div class="col-sm-4">
+                            <input class="form-control" type="username" id="username" name="username" {% if user_name %}
+                                placeholder="{{ user_name }}" {% endif %}>
+                            <br>
+                            <br>
+                        </div>
+                </div><!-- .pick char ends -->              
                     </div>
-                    <div class="col-sm-4">
-                        <input class="form-control" type="username" id="username" name="username" {% if user_name %}
-                            placeholder="{{ user_name }}" {% endif %}>
-                        <br>
-                        <br>
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <input class="form-control" name="user-input" id="user-input" style="border-radius: 5px"
+                                placeholder="Start typing...">
+                            <br>
+                        </div>
+                        <div class="col-sm-12">
+                            <input class="form-control" type="submit" value="Submit" id="bot-chat-submit-button">
+                            <br>
+                            <br>
+                        </div>
                     </div>
-                </div>    
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <input class="form-control" name="user-input" id="user-input" style="border-radius: 5px"
-                            placeholder="Start typing...">
-                        <br>
-                    </div>
-                    <div class="col-sm-12">
-                        <input class="form-control" type="submit" value="Submit" id="bot-chat-submit-button">
-                        <br>
-                        <br>
-                    </div>
-                </div>
-                </form>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <p><em>*To switch characters, end the conversation.</em></p>
+                            </form>
+                            <div class="row">
+                                <div class="col-sm-12">
+                                    <p><em>*To switch characters, end the conversation.</em></p>
+                                </div>
+                                <div class="col-sm-12">
+                                    <form action="/clear" method="GET">
+                                        <input class="form-control" type="submit" value="End Chat" id="end-convo">
+                                    </form>
+                                </div>
+                            </div>
+                        </div> <!-- .col-sm-12 end convo note & button -->
+                        <div class="col-sm-6">
+                            <img src="static/images/jerry comp gif.gif">
+                        </div>
+                    </div> <!-- .col-sm-6 entire left column ends -->
+                </div> <!-- .row for left side column ends -->
+            </div> <!-- .bot-chat ends -->
+        </div> <!-- .float-right ends -->
+        </div> <!-- .container ends -->
 
-                    </div>
-                    <div class="col-sm-12">
-                        <form action="/clear" method="GET">
-                            <input class="form-control" type="submit" value="End Chat" id="end-convo">
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6">
-                <img src="static/images/jerry comp gif.gif">
-            </div>
-        </div>
-    </div>
-</div>
-</div>
 
-<div class="transcript">
-    <!-- for how many messages are saved in the session, show that many messages with
-            a bot response-->
-    <!-- user_messages session holds "None" in session upon load, making len=1-->
-    {% for i in range(user_messages|length) %}
-    {% if user_messages[i+1] %}<p id="user-line"><span id="user-name-style">{{ user_name }}:
-        </span><span class="message-font">{{ user_messages[i+1] }}</span></p><br>
-    {% if bot_responses[i] %}<p id="bot-line"><span id="bot-name-style">{{ bot_name }}: </span><span
-            class="message-font">{{ bot_responses[i] }}</span></p><br>{% endif %}{%
-    endif %}
-    {% endfor %}
-</div>
 
-<script type="text/javascript">
-    var url = window.location.href;
-    if (url.includes("username")) {
-        document.getElementById("pick-char").style.display = "none";
-    }
+        <script type="text/javascript">
+            var url = window.location.href;
+            if (url.includes("username")) {
+                document.getElementById("pick-char").style.display = "none";
+            }
 
-    
-    // find the element with the thing youre taking
-    const submitInput = document.getElementById('user-input');
-    // look for the action that consents to taking the thing
-    submitInput.addEventListener('keydown', function (event) {
-        // this is the action
-        if (event.keyCode == 13) {
-            // dont do what would normally happen when the action is requested
-            event.preventDefault();
-            // instead, do this (click the submit button)
-            document.getElementById("submit-button").click();
-        }
-    });
-</script>
-{% endblock %}
+
+            // find the element with the thing youre taking
+            const submitInput = document.getElementById('user-input');
+            // look for the action that consents to taking the thing
+            submitInput.addEventListener('keydown', function (event) {
+                // this is the action
+                if (event.keyCode == 13) {
+                    // dont do what would normally happen when the action is requested
+                    event.preventDefault();
+                    // instead, do this (click the submit button)
+                    document.getElementById("submit-button").click();
+                }
+            });
+        </script>
+        {% endblock %}
