--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -41,14 +41,14 @@
         <p><a class="btn btn-secondary" href="#" role="button">Let's chat! &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-3">
-        <img class="rounded-circle" src="static/images/frank points.jpg" alt="Generic placeholder image" width="140"
+        <img class="rounded-circle" src="static/images/frank points.jpg" alt="Frank yelling about Festivus" width="140"
           height="140">
         <h2>Festivus</h2>
         <p>The holiday is approaching. Check to see how much longer until it's here.</p>
         <p><a class="btn btn-secondary" href="#" role="button">When is it? &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-3">
-        <img class="rounded-circle" src="static/images/kramer computer.jpg" alt="Generic placeholder image" width="140"
+        <img class="rounded-circle" src="static/images/kramer computer.jpg" alt="Kramer and Jerry using technology" width="140"
           height="140">
         <h2>Tweets</h2>
         <p>Seinfeld's final episode was in 1998, but that doesn't mean the actors are sitting around doing more nothing.
@@ -56,7 +56,7 @@
         <p><a class="btn btn-secondary" href="#" role="button">Show me! &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-3">
-        <img class="rounded-circle" src="static/images/toms.jpeg" alt="Generic placeholder image" width="140"
+        <img class="rounded-circle" src="static/images/toms.jpeg" alt="Tom's Restaurant in Manhattan" width="140"
           height="140">
         <h2>Restaurants</h2>
         <p>Use the local search to see where cuisine and items mentioned on the show are available near you.</p>
