--- a/templates/seinfood.html
+++ b/templates/seinfood.html
@@ -22,7 +22,7 @@
 <div class="container">
     <div class="float-right">
         <div class="row">
-            <div class="col-lg">
+            <div class="col-sm-7">
                 <div class="page-description">
                     <p>The show Seinfeld often uses food as a plot device. Sometimes the
                         foods sound tasty, or maybe the show is the first time you're hearing
@@ -54,7 +54,10 @@
                         </form>
                     </div>
                 </div>
-                <div class="col-sm-8">
+                <div class="col-sm-2">
+
+                </div>
+                <div class="col-sm-6">
                     {% if zip_code_search %}
                     <div class="food-results">
                         <h2>Places: </h2>
@@ -65,6 +68,7 @@
 
                     </div>
                     {% endif %}
+                    <br>
                 </div>
             </div>
         </div>
