--- a/templates/example.html
+++ b/templates/example.html
@@ -1,64 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+
     <!-- CSS only -->
 
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link href="static/css/index.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+        <link href="static/css/index.css" rel="stylesheet">
+    <style>
+        /* Links */
+        a,
+        a:focus,
+        a:hover {
+            color: #fff;
+        }
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        /* Custom default button */
+        .btn-secondary,
+        .btn-secondary:hover,
+        .btn-secondary:focus {
+            color: #333;
+            text-shadow: none;
+            /* Prevent inheritance from `body` */
+            background-color: #fff;
+            border: .05rem solid #fff;
+        }
+
+        /*
+ * Cover
+ */
+        .cover {
+            padding: 0 1.5rem;
+        }
+
+        .cover .btn-lg {
+            padding: .75rem 1.25rem;
+            font-weight: 700;
+        }
+    </style>
+<header>
+    <nav class="navbar navbar-expand-xl navbar-dark fixed-top active" style="background-color: #dd6e42">
+        <a class="navbar-brand" id="navbar-logo" href="/">The Ultimate Seinfeld Experience</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+            aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                <li class="nav-item">
+                    <a class="nav-link" href="/character-chat">Character Bot</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/where-are-they-now">Where Are They Now?</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/food-locator">SeinFood Locator</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/festivus">Festivus Countdown</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</header>
+
+<body class="text-center">
+
+    <div class="cover-container d-flex h-100 mx-auto flex-column">
 
 
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-dark fixed-top" style="background-color: #dd6e42">
-            <a class="navbar-brand" href="/">The Ultimate Seinfeld Experience</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                    <li class="nav-item">
-                        <a class="nav-link" href="/character-chat">Character Bot</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/where-are-they-now">Where Are They Now?</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/food-locator">SeinFood Locator</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/festivus">Festivus Countdown</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-</head>
-    <body>
-      <header class="subpage-header">
-        <h1>Where Are They Now?</h1>
-      </header>
-      <div class="container">
-        <div class="float-right">
+        <div class="bg-image d-flex justify-content-center align-items-center" style="
+    background-image: url('static/images/georgeparents.jpg');
+    height: 100vh; background-size: cover;
+  ">
 
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <!-- FOOTER -->
-        <footer class="container">
-            <p class="float-right"><a href="#">Back to top</a></p>
-            <p>&copy; Sam Gerrity Industries 2021 &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-        </footer>
-        <br>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+            <!-- <h1>GEORGE'S PARENTS</h1> -->
+            <main role="main" class="inner cover">
+                <h1 class="cover-heading">Cover your page.</h1>
+                <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download,
+                    edit the text, and add your own fullscreen background photo to make it your own.</p>
+                <p class="lead">
+                    <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+                </p>
+            </main>
+        </div>
+    </div>
+    <footer class="container">
+        <hr class="featurette-divider">
+        <p class="float-right">
+        <p>&copy; Sam Gerrity Industries 2021 &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    </footer>
+    <br>
+</body>
+
+
+<script src=" https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
+    crossorigin="anonymous">
+    </script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+    integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js"
+    integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc"
+    crossorigin="anonymous"></script>
 
 
 </html>
