--- a/templates/where-are-they-now.html
+++ b/templates/where-are-they-now.html
@@ -26,7 +26,7 @@
                             <h2 class="accordion-header" id="headingOne">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="color: #4f6d7a">
-                                    Jerry Seinfeld as 'Jerry' on 'Seinfeld'
+                                    <em><strong>@JerrySeinfeld</strong></em>
                                 </button>
                             </h2>
                             <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
@@ -49,7 +49,7 @@
                             <h2 class="accordion-header" id="headingTwo">
                                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo" style="color: #4f6d7a">
-                                    Julia Louis-Dreyfus as 'Elaine' on 'Seinfeld'
+                                    @
                                 </button>
                             </h2>
                             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
