--- a/templates/example.html
+++ b/templates/example.html
@@ -78,14 +78,12 @@
     background-image: url('static/images/georgeparents.jpg');
     height: 100vh; background-size: cover;
   ">
-
-            <!-- <h1>GEORGE'S PARENTS</h1> -->
             <main role="main" class="inner cover">
-                <h1 class="cover-heading">Cover your page.</h1>
+                <h1 class="subpage-header">Cover your page.</h1>
                 <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download,
                     edit the text, and add your own fullscreen background photo to make it your own.</p>
                 <p class="lead">
-                    <a href="#" class="btn btn-lg btn-secondary">Learn more</a>
+                    <a href="#" class="btn btn-lg btn-outline-warning">235</a>
                 </p>
             </main>
         </div>
