--- a/templates/example.html
+++ b/templates/example.html
@@ -76,14 +76,16 @@
 
         <div class="bg-image d-flex justify-content-center align-items-center" style="
     background-image: url('static/images/georgeparents.jpg');
-    height: 100vh; background-size: cover;
+    height: 75vh; background-size: cover;
   ">
             <main role="main" class="inner cover">
-                <h1 class="subpage-header">Cover your page.</h1>
-                <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download,
-                    edit the text, and add your own fullscreen background photo to make it your own.</p>
+                <h1 id="sam-font-2">Countdown to Festivus</h1>
+                <div id="festivus-tagline">Festivus is December 23rd 2021! <em>Mark your calendar.</em>
+                </div>
+                <br>
+                <br>
                 <p class="lead">
-                    <a href="#" class="btn btn-lg btn-outline-warning">235</a>
+                    <a href="#" class="btn btn-lg btn-outline-warning" id="festivus-btn">235 DAYS</a>
                 </p>
             </main>
         </div>
